fix align center number

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@
     font-family: "Edmondsans-medium";
     font-size: 4em;
     color: #3c96dc;
-    text-align: center;
     line-height: 2em;
   }
   .explanation-container {
